fix attach and no-wrap on folder

--- a/packages/filebrowser/style/base.css
+++ b/packages/filebrowser/style/base.css
@@ -63,6 +63,7 @@
   padding: 0 2px;
   border-radius: var(--jp-border-radius);
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .jp-BreadCrumbs-item:hover {
